# qualibrate-lab-notebook

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
lab_notebook/: __main__.py  app.py  cli.py  config.py  log_utils.py
lab_notebook/static/: style.css
lab_notebook/templates/: backend_selection.html  index.html  state_visualization.html
lab_notebook/tests/: test_state_changes.py
