[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-notebook"
version = "0.1.0"
description = "A web-based application for viewing and organizing laboratory experiment plots chronologically"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [
    { name = "Omrie Ovdat", email = "omrie.ovdat@quamtum-machines.co" }
]
dependencies = [
    "flask>=3.0.2",
    "python-dateutil>=2.8.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "h5py>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lab_notebook"]

[tool.hatch.build]
include = [
    "lab_notebook/**/*.py",
    "lab_notebook/templates/**/*.html",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line-output = 3

[project.scripts]
lab-notebook = "lab_notebook.app:main"

[project.urls]
"Homepage" = "https://github.com/i-qcc/lab_notebook_poc"
"Bug Tracker" = "https://github.com/i-qcc/lab_notebook_poc/issues"

[project.config]
default_lab_path = "/home/omrieoqm/.qualibrate/user_storage"
state_logs_dir = "~/.lab_notebook/state_logs"
experiment_cache_dir = "~/.lab_notebook/experiment_cache" 