[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "qualibrate-lab-notebook"
version = "0.1.0"
description = "A web-based application for visualizing and analyzing Qualibrate experiment data"
authors = ["Omrie Ovdat <omrie.ovdat@quamtum-machines.co>"]
packages = [
    { include = "lab_notebook" }
]

[project]
name = "qualibrate-lab-notebook"
version = "0.1.0"
description = "A web-based application for visualizing and analyzing Qualibrate experiment data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "BSD-3-Clause"
authors = [
    { name = "Omrie Ovdat", email = "omrie.ovdat@quamtum-machines.co" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dateutil>=2.8.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "h5py>=3.10.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lab_notebook"]

[tool.hatch.build]
include = [
    "lab_notebook/**/*.py",
    "lab_notebook/templates/**/*.html",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line-output = 3

[project.scripts]
qualibrate-lab-notebook = "lab_notebook.cli:main"

[project.urls]
"Homepage" = "https://github.com/quantum-machines/qualibrate-lab-notebook"
"Bug Tracker" = "https://github.com/quantum-machines/qualibrate-lab-notebook/issues"

[project.config]
default_lab_path = "~/.qualibrate/user_storage"